--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,3 +17,16 @@ spec:
         image: gcr.io/turing-course-434723-e6/flask-sqlserver-app:latest
         ports:
         - containerPort: 5000
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 5000
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "500m"
+          limits:
+            memory: "512Mi"
+            cpu: "1"
